chore(deploy): containerized deployment with base image and Linux toolkit